# hopfield

./: Cargo.toml  README.md  README_font8x8.md  README_mnist.md
src/: cnn.rs  hopfield.rs  lib.rs  main.rs  mnist.rs  state.rs
