[package]
name = "hopfield"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
env_logger = "0.11.8"
font8x8 = { git = "https://github.com/jesper-olsen/font8x8-rs", branch = "master" }
gnuplot = "0.0.46"
log = "0.4.28"
serde = { version = "1.0.226", features = ["derive"] }

[lib]
name = "hopfield"
path = "src/lib.rs"
